--- a/background.html
+++ b/background.html
@@ -1,59 +1,3 @@
-<script>
-// <!--
-   	 
-   var path_white;
-   var path_black;
+<script src="siteblock.js" type="text/javascript"></script>
 
-   updatePaths = function() {
-	var paths = localStorage['siteblock_list'];
-        if (paths === undefined)
-	  return;
-
-	paths = paths.split("\n");
-	path_white = new Array();
-	path_black = new Array();
-
-	for (var i = 0 ; i < paths.length; ++i) {
-	    var p = paths[i];
-	    if (p.match(/^\s*$/)) {
-	    } else {
-	       var add = path_black;	    
-	       if (p[0] == '+') {
-		  p = p.substr(1);
-		  add = path_white;
-	       }
-	       p = p.replace('.', '\\.');
-	       p = p.replace('*', '.*');
-	       add.push(new RegExp(p, 'ig'));
-            }
-	}
-   }
-
-   updatePaths();
-
-   chrome.tabs.onUpdated.addListener(function(tabid, changeinfo, tab) {
-	var url = tab.url;
-        if (url !== undefined && url.match(/https?:/)) {
-           var blocked = false;
-	   var p;
-	   for (p in path_black) {
-		 if (url.search(path_black[p]) != -1) {
-                     blocked = true;
-		     break;
-		 }
-	   }
-	   for (p in path_white) {
-		 if (url.search(path_white[p]) != -1) {
-                     blocked = false;
-		     break;
-		 }
-	   }
-           if (blocked) {
-              up = new Object();
-    	      up.url = chrome.extension.getURL("blocked.html");
-	      chrome.tabs.update(tab.id, up);
-	   }
-	}
-   });
-// -->
-</script>
+<script src="background.js" type="text/javascript"></script>
