[UPDATE] add icon to toolbar, add link to home page(github), moved files

--- a/html/options.html
+++ b/html/options.html
@@ -2,8 +2,8 @@
     <head>
         <title>SiteBlock Extension Options</title>
 
-        <script type="text/javascript" src="siteblock.js"></script>
-        <script type="text/javascript" src="options.js"></script>
+        <script type="text/javascript" src="../js/siteblock.js"></script>
+        <script type="text/javascript" src="../js/options.js"></script>
 
     </head>
 
@@ -35,5 +35,6 @@ on the first line and the websites you wish to allow with a '+' before each line
 +msdn.microsoft.com
 </pre>
 
+<a href="https://github.com/csapuntz/siteblock/">Home page</a>
 </body>
 </html>
