--- a/html/blocked.html
+++ b/html/blocked.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="blocked.js" type="text/javascript"></script>
+        <script src="../js/blocked.js" type="text/javascript"></script>
     </head>
     <body>
         <h1>Blocked by SiteBlock extension</h1>
