--- a/html/test.html
+++ b/html/test.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.0r4/build/logger/assets/skins/sam/logger.css&2.8.0r4/build/yuitest/assets/skins/sam/yuitest.css" />
 <!-- Combo-handled YUI JS files: -->
 <script type="text/javascript" src="http://yui.yahooapis.com/combo?2.8.0r4/build/yahoo-dom-event/yahoo-dom-event.js&2.8.0r4/build/logger/logger-min.js&2.8.0r4/build/yuitest/yuitest-min.js"></script>
-<script type="text/javascript" src="siteblock.js"></script>
+<script type="text/javascript" src="../js/siteblock.js"></script>
 
 <script type="text/javascript">
 // <!-- 
