Add redirect functionality

--- a/html/options.html
+++ b/html/options.html
@@ -27,6 +27,11 @@ nytimes.com
 google.com/news
 </pre>
 
+<p>If you would like to redirect to another page for some blocked sites, designate this with a &gt; (spaces required). For example:</p>
+<pre>
+reddit.com > wikipedia.org
+</pre>
+
 <p>If you would like to block all sites except for a select few, enter a '*'
 on the first line and the websites you wish to allow with a '+' before each line. For example:</p>
 <pre>
