Switch to manifest v3
Move to using chrome.storage.local from localStorage.
Use an offscreen page to retrieve the old localStorage.

Move to using alarms for the periodic checks of tab usage.

--- a/html/options.html
+++ b/html/options.html
@@ -2,8 +2,7 @@
     <head>
         <title>SiteBlock Extension Options</title>
 
-        <script type="text/javascript" src="../js/siteblock.js"></script>
-        <script type="text/javascript" src="../js/options.js"></script>
+        <script type="module" src="../js/options.js"></script>
 
     </head>
 
