--- a/html/test.html
+++ b/html/test.html
@@ -4,11 +4,9 @@
 <!-- Combo-handled YUI CSS files: -->
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.8.0r4/build/logger/assets/skins/sam/logger.css&2.8.0r4/build/yuitest/assets/skins/sam/yuitest.css" />
 <script type="text/javascript" src="../js/third-party/yuitest.js"></script>
-<script type="text/javascript" src="../js/siteblock.js"></script>
-<script type="text/javascript" src="../js/test.js"></script>
+<script type="module" src="../js/test.js"></script>
 
 </head>
 <body class="yui-skin-sam">
 </body>
 </html>
-
